# Oracul_TelegramBot

./: README.md  main.py  pyproject.toml
handlers/: main_start.py
keyboards/: reply_all.py
services/: API_ORAKUL.py
utils/: const_func.py
